--- a/README.org
+++ b/README.org
@@ -53,7 +53,7 @@ Initial version
 - Includes various Emacs style navigation commands
 - Ergonomic keyboard layout options
 - Easily add your own keybindings by modifying AHK source files
-- *Bindings bespoke to individual applications
+- *Bindings bespoke to individual applications*
 
 ** My current thoughts
 
@@ -99,56 +99,54 @@ The IGNORE column includes functions that I am definitely not going to implement
 The EXTRA section are additional commands that I am adding.
 
 #+begin: kanban :layout ("..." . 50) :scope nil :range ("TODO" . "IGNORE") :sort "O" :depth 3 :compressed t
-| TODO                        | DOING                        | DONE                     | IGNORE                   |
-|-----------------------------+------------------------------+--------------------------+--------------------------|
-| [[file:README.org::*REGION COMMANDS][REGION COMMANDS]]             | [[file:README.org::*---- VISUAL STUDIO ----][---- VISUAL STUDIO ----]]      | [[file:README.org::*MOTION COMMANDS][MOTION COMMANDS]]          | [[file:README.org::*- scroll_left][- scroll_left]]            |
-| [[file:README.org::*- mark_word][- mark_word]]                 | [[file:README.org::*- isearch_backwards][- isearch_backwards]]          | [[file:README.org::*- forward_char][- forward_char]]           | [[file:README.org::*- scroll_right][- scroll_right]]           |
-| [[file:README.org::*- kill_region][- kill_region]]               | [[file:README.org::*- isearch_forwards][- isearch_forwards]]           | [[file:README.org::*- backward_char][- backward_char]]          | [[file:README.org::*- open_line][- open_line]]              |
-| [[file:README.org::*- yank_pop][- yank_pop]]                  | [[file:README.org::*- recenter_line][- recenter_line]]              | [[file:README.org::*- forward_word][- forward_word]]           | [[file:README.org::*- transpose_chars][- transpose_chars]]        |
-| [[file:README.org::*- delete_backward_char][- delete_backward_char]]      | [[file:README.org::*- indent_line][- indent_line]]                | [[file:README.org::*- backward_word][- backward_word]]          | [[file:README.org::*- transpose_words][- transpose_words]]        |
-| [[file:README.org::*- kill_word][- kill_word]]                 | [[file:README.org::*ADD PROGRAM SPECIFIC PRESETS][ADD PROGRAM SPECIFIC PRESETS]] | [[file:README.org::*- next_line][- next_line]]              | [[file:README.org::*- transpose_lines][- transpose_lines]]        |
-| [[file:README.org::*- kill_whole_line][- kill_whole_line]]           |                              | [[file:README.org::*- previous_line][- previous_line]]          | [[file:README.org::*CASE CONVERSION COMMANDS][CASE CONVERSION COMMANDS]] |
-| [[file:README.org::*NEWLINE AND INDENT COMMANDS][NEWLINE AND INDENT COMMANDS]] |                              | [[file:README.org::*JUMPING AROUND COMMANDS][JUMPING AROUND COMMANDS]]  | [[file:README.org::*- upcase_region][- upcase_region]]          |
-| [[file:README.org::*- newline][- newline]]                   |                              | [[file:README.org::*- scroll_down][- scroll_down]]            | [[file:README.org::*- downcase_region][- downcase_region]]        |
-| [[file:README.org::*- delete_indentation][- delete_indentation]]        |                              | [[file:README.org::*- scroll_up][- scroll_up]]              | [[file:README.org::*- upcase_word][- upcase_word]]            |
-| [[file:README.org::*EDIT COMMANDS][EDIT COMMANDS]]               |                              | [[file:README.org::*- move_beginning_of_line][- move_beginning_of_line]] | [[file:README.org::*- downcase_word][- downcase_word]]          |
-| [[file:README.org::*- redo][- redo]]                      |                              | [[file:README.org::*- move_end_of_line][- move_end_of_line]]       | [[file:README.org::*- capitalize_word][- capitalize_word]]        |
-| [[file:README.org::*- query_replace][- query_replace]]             |                              | [[file:README.org::*- beginning_of_buffer][- beginning_of_buffer]]    |                          |
-| [[file:README.org::*- overwrite_mode][- overwrite_mode]]            |                              | [[file:README.org::*- end_of_buffer][- end_of_buffer]]          |                          |
-| [[file:README.org::*INSERT PAIRS COMMANDS][INSERT PAIRS COMMANDS]]       |                              | [[file:README.org::*- goto_line][- goto_line]]              |                          |
-| [[file:README.org::*- insert_parentheses][- insert_parentheses]]        |                              | [[file:README.org::*- mark_whole_line][- mark_whole_line]]        |                          |
-| [[file:README.org::*- insert_comment][- insert_comment]]            |                              | [[file:README.org::*- mark_whole_buffer][- mark_whole_buffer]]      |                          |
-| [[file:README.org::*- indent_new_comment_line][- indent_new_comment_line]]   |                              | [[file:README.org::*- kill_ring_save][- kill_ring_save]]         |                          |
-| [[file:README.org::*OTHER COMMANDS][OTHER COMMANDS]]              |                              | [[file:README.org::*- yank][- yank]]                   |                          |
-| [[file:README.org::*- shell][- shell]]                     |                              | [[file:README.org::*- delete_char][- delete_char]]            |                          |
-| [[file:README.org::*- shell_command][- shell_command]]             |                              | [[file:README.org::*- backward_kill_word][- backward_kill_word]]     |                          |
-| [[file:README.org::*- facemenu][- facemenu]]                  |                              | [[file:README.org::*- kill_line][- kill_line]]              |                          |
-| [[file:README.org::*- help][- help]]                      |                              | [[file:README.org::*- indent_for_tab_command][- indent_for_tab_command]] |                          |
-| [[file:README.org::*SYSTEM COMMANDS][SYSTEM COMMANDS]]             |                              | [[file:README.org::*- undo_only][- undo_only]]              |                          |
-| [[file:README.org::*- ignore][- ignore]]                    |                              | [[file:README.org::*- search_forward][- search_forward]]         |                          |
-| [[file:README.org::*- repeat][- repeat]]                    |                              | [[file:README.org::*- search_backward][- search_backward]]        |                          |
-| [[file:README.org::*DIGIT ARGUMENT COMMANDS][DIGIT ARGUMENT COMMANDS]]     |                              | [[file:README.org::*- set_mark_command][- set_mark_command]]       |                          |
-| [[file:README.org::*MACRO RECORDING COMMANDS][MACRO RECORDING COMMANDS]]    |                              | [[file:README.org::*- set_cx_command][- set_cx_command]]         |                          |
-| [[file:README.org::*FILES COMMANDS][FILES COMMANDS]]              |                              | [[file:README.org::*- keyboard_quit][- keyboard_quit]]          |                          |
-| [[file:README.org::*- write_file][- write_file]]                |                              | [[file:README.org::*- save_buffer][- save_buffer]]            |                          |
-| [[file:README.org::*- find_file][- find_file]]                 |                              |                          |                          |
-| [[file:README.org::*- dired][- dired]]                     |                              |                          |                          |
-| [[file:README.org::*WINDOWS FRAMES COMMANDS][WINDOWS FRAMES COMMANDS]]     |                              |                          |                          |
-| [[file:README.org::*- kill_frame][- kill_frame]]                |                              |                          |                          |
-| [[file:README.org::*- delete_window][- delete_window]]             |                              |                          |                          |
-| [[file:README.org::*- split_window][- split_window]]              |                              |                          |                          |
-| [[file:README.org::*- next_window][- next_window]]               |                              |                          |                          |
-| [[file:README.org::*- previous_window][- previous_window]]           |                              |                          |                          |
-| [[file:README.org::*- suspend_frame][- suspend_frame]]             |                              |                          |                          |
-| [[file:README.org::*ADD HOOKS][ADD HOOKS]]                   |                              |                          |                          |
-| [[file:README.org::*ADD IGNORE FRAMES][ADD IGNORE FRAMES]]           |                              |                          |                          |
-| [[file:README.org::*ADD GENERIC GOTO LINE][ADD GENERIC GOTO LINE]]       |                              |                          |                          |
-| [[file:README.org::*ADD KILL RING][ADD KILL RING]]               |                              |                          |                          |
-| [[file:README.org::*ADD MOUSE EVENTS][ADD MOUSE EVENTS]]            |                              |                          |                          |
-| [[file:README.org::*ADD C-X][ADD C-X]]                     |                              |                          |                          |
-| [[file:README.org::*EXTRA ERGO PRESET SELECTION][EXTRA ERGO PRESET SELECTION]] |                              |                          |                          |
-| [[file:README.org::*EXTRA][EXTRA]]                       |                              |                          |                          |
-| [[file:README.org::*- ctrl_mapping][- ctrl_mapping]]              |                              |                          |                          |
+| TODO                             | DOING                        | DONE                         | IGNORE                        |
+|----------------------------------+------------------------------+------------------------------+-------------------------------|
+| [[file:README.org::*CORE REGION COMMANDS][CORE REGION COMMANDS]]             | [[file:README.org::*---- VISUAL STUDIO ----][---- VISUAL STUDIO ----]]      | [[file:README.org::*CORE MOTION COMMANDS][CORE MOTION COMMANDS]]         | [[file:README.org::*- scroll_left][- scroll_left]]                 |
+| [[file:README.org::*- mark_word][- mark_word]]                      | [[file:README.org::*- recenter_line][- recenter_line]]              | [[file:README.org::*- forward_char][- forward_char]]               | [[file:README.org::*- scroll_right][- scroll_right]]                |
+| [[file:README.org::*- kill_region][- kill_region]]                    | [[file:README.org::*- indent_line][- indent_line]]                | [[file:README.org::*- backward_char][- backward_char]]              | [[file:README.org::*- open_line][- open_line]]                   |
+| [[file:README.org::*- yank_pop][- yank_pop]]                       | [[file:README.org::*---- VSCODE ----][---- VSCODE ----]]             | [[file:README.org::*- forward_word][- forward_word]]               | [[file:README.org::*- transpose_chars][- transpose_chars]]             |
+| [[file:README.org::*- delete_backward_char][- delete_backward_char]]           | [[file:README.org::*- isearch_backwards][- isearch_backwards]]          | [[file:README.org::*- backward_word][- backward_word]]              | [[file:README.org::*- transpose_words][- transpose_words]]             |
+| [[file:README.org::*- kill_word][- kill_word]]                      | [[file:README.org::*- isearch_forwards][- isearch_forwards]]           | [[file:README.org::*- next_line][- next_line]]                  | [[file:README.org::*- transpose_lines][- transpose_lines]]             |
+| [[file:README.org::*- kill_whole_line][- kill_whole_line]]                | [[file:README.org::*ADD PROGRAM SPECIFIC PRESETS][ADD PROGRAM SPECIFIC PRESETS]] | [[file:README.org::*- previous_line][- previous_line]]              | [[file:README.org::*CORE CASE CONVERSION COMMANDS][CORE CASE CONVERSION COMMANDS]] |
+| [[file:README.org::*CORE NEWLINE AND INDENT COMMANDS][CORE NEWLINE AND INDENT COMMANDS]] |                              | [[file:README.org::*CORE JUMPING AROUND COMMANDS][CORE JUMPING AROUND COMMANDS]] | [[file:README.org::*- upcase_region][- upcase_region]]               |
+| [[file:README.org::*- newline][- newline]]                        |                              | [[file:README.org::*- scroll_down][- scroll_down]]                | [[file:README.org::*- downcase_region][- downcase_region]]             |
+| [[file:README.org::*- delete_indentation][- delete_indentation]]             |                              | [[file:README.org::*- scroll_up][- scroll_up]]                  | [[file:README.org::*- upcase_word][- upcase_word]]                 |
+| [[file:README.org::*CORE EDIT COMMANDS][CORE EDIT COMMANDS]]               |                              | [[file:README.org::*- move_beginning_of_line][- move_beginning_of_line]]     | [[file:README.org::*- downcase_word][- downcase_word]]               |
+| [[file:README.org::*- redo][- redo]]                           |                              | [[file:README.org::*- move_end_of_line][- move_end_of_line]]           | [[file:README.org::*- capitalize_word][- capitalize_word]]             |
+| [[file:README.org::*- query_replace][- query_replace]]                  |                              | [[file:README.org::*- beginning_of_buffer][- beginning_of_buffer]]        | [[file:README.org::*CORE MACRO RECORDING COMMANDS][CORE MACRO RECORDING COMMANDS]] |
+| [[file:README.org::*- overwrite_mode][- overwrite_mode]]                 |                              | [[file:README.org::*- end_of_buffer][- end_of_buffer]]              | [[file:README.org::*CORE ADD IGNORE FRAMES][CORE ADD IGNORE FRAMES]]        |
+| [[file:README.org::*CORE INSERT PAIRS COMMANDS][CORE INSERT PAIRS COMMANDS]]       |                              | [[file:README.org::*- goto_line][- goto_line]]                  | [[file:README.org::*CORE ADD MOUSE EVENTS][CORE ADD MOUSE EVENTS]]         |
+| [[file:README.org::*- insert_parentheses][- insert_parentheses]]             |                              | [[file:README.org::*- mark_whole_line][- mark_whole_line]]            |                               |
+| [[file:README.org::*- insert_comment][- insert_comment]]                 |                              | [[file:README.org::*- mark_whole_buffer][- mark_whole_buffer]]          |                               |
+| [[file:README.org::*- indent_new_comment_line][- indent_new_comment_line]]        |                              | [[file:README.org::*- kill_ring_save][- kill_ring_save]]             |                               |
+| [[file:README.org::*CORE OTHER COMMANDS][CORE OTHER COMMANDS]]              |                              | [[file:README.org::*- yank][- yank]]                       |                               |
+| [[file:README.org::*- shell][- shell]]                          |                              | [[file:README.org::*- delete_char][- delete_char]]                |                               |
+| [[file:README.org::*- shell_command][- shell_command]]                  |                              | [[file:README.org::*- backward_kill_word][- backward_kill_word]]         |                               |
+| [[file:README.org::*- facemenu][- facemenu]]                       |                              | [[file:README.org::*- kill_line][- kill_line]]                  |                               |
+| [[file:README.org::*- help][- help]]                           |                              | [[file:README.org::*- indent_for_tab_command][- indent_for_tab_command]]     |                               |
+| [[file:README.org::*CORE SYSTEM COMMANDS][CORE SYSTEM COMMANDS]]             |                              | [[file:README.org::*- undo_only][- undo_only]]                  |                               |
+| [[file:README.org::*- ignore][- ignore]]                         |                              | [[file:README.org::*- search_forward][- search_forward]]             |                               |
+| [[file:README.org::*- repeat][- repeat]]                         |                              | [[file:README.org::*- search_backward][- search_backward]]            |                               |
+| [[file:README.org::*CORE DIGIT ARGUMENT COMMANDS][CORE DIGIT ARGUMENT COMMANDS]]     |                              | [[file:README.org::*- set_mark_command][- set_mark_command]]           |                               |
+| [[file:README.org::*CORE FILES COMMANDS][CORE FILES COMMANDS]]              |                              | [[file:README.org::*- set_cx_command][- set_cx_command]]             |                               |
+| [[file:README.org::*- write_file][- write_file]]                     |                              | [[file:README.org::*- keyboard_quit][- keyboard_quit]]              |                               |
+| [[file:README.org::*- find_file][- find_file]]                      |                              | [[file:README.org::*- save_buffer][- save_buffer]]                |                               |
+| [[file:README.org::*- dired][- dired]]                          |                              | [[file:README.org::*CORE ADD C-X][CORE ADD C-X]]                 |                               |
+| [[file:README.org::*CORE WINDOWS FRAMES COMMANDS][CORE WINDOWS FRAMES COMMANDS]]     |                              | [[file:README.org::*- isearch_backwards][- isearch_backwards]]          |                               |
+| [[file:README.org::*- kill_frame][- kill_frame]]                     |                              | [[file:README.org::*- isearch_forwards][- isearch_forwards]]           |                               |
+| [[file:README.org::*- delete_window][- delete_window]]                  |                              | [[file:README.org::*- comment_line][- comment_line]]               |                               |
+| [[file:README.org::*- split_window][- split_window]]                   |                              | [[file:README.org::*- comment_line][- comment_line]]               |                               |
+| [[file:README.org::*- next_window][- next_window]]                    |                              |                              |                               |
+| [[file:README.org::*- previous_window][- previous_window]]                |                              |                              |                               |
+| [[file:README.org::*- suspend_frame][- suspend_frame]]                  |                              |                              |                               |
+| [[file:README.org::*CORE ADD HOOKS][CORE ADD HOOKS]]                   |                              |                              |                               |
+| [[file:README.org::*ADD GENERIC GOTO LINE][ADD GENERIC GOTO LINE]]            |                              |                              |                               |
+| [[file:README.org::*CORE ADD KILL RING][CORE ADD KILL RING]]               |                              |                              |                               |
+| [[file:README.org::*- recenter_line][- recenter_line]]                  |                              |                              |                               |
+| [[file:README.org::*- indent_line][- indent_line]]                    |                              |                              |                               |
+| [[file:README.org::*EXTRA ERGO PRESET SELECTION][EXTRA ERGO PRESET SELECTION]]      |                              |                              |                               |
+| [[file:README.org::*EXTRA][EXTRA]]                            |                              |                              |                               |
+| [[file:README.org::*- ctrl_mapping][- ctrl_mapping]]                   |                              |                              |                               |
 #+end:
 
 * Usage
@@ -255,14 +253,14 @@ Enjoy using WOWEE and bring the power of Emacs navigation to your Windows experi
 
 * ROADMAP
 
-** DONE MOTION COMMANDS
+** DONE CORE MOTION COMMANDS
 *** DONE - forward_char
 *** DONE - backward_char
 *** DONE - forward_word
 *** DONE - backward_word
 *** DONE - next_line
 *** DONE - previous_line
-** DONE JUMPING AROUND COMMANDS
+** DONE CORE JUMPING AROUND COMMANDS
 *** DONE - scroll_down
 *** DONE - scroll_up
 *** IGNORE - scroll_left
@@ -272,7 +270,7 @@ Enjoy using WOWEE and bring the power of Emacs navigation to your Windows experi
 *** DONE - beginning_of_buffer
 *** DONE - end_of_buffer
 *** DONE - goto_line
-** TODO REGION COMMANDS
+** TODO CORE REGION COMMANDS
 *** TODO - mark_word
 *** DONE - mark_whole_line
 *** DONE - mark_whole_buffer
@@ -286,12 +284,12 @@ Enjoy using WOWEE and bring the power of Emacs navigation to your Windows experi
 *** DONE - backward_kill_word
 *** DONE - kill_line
 *** TODO - kill_whole_line
-** TODO NEWLINE AND INDENT COMMANDS
+** TODO CORE NEWLINE AND INDENT COMMANDS
 *** TODO - newline
 *** IGNORE - open_line
 *** DONE - indent_for_tab_command
 *** TODO - delete_indentation
-** TODO EDIT COMMANDS
+** TODO CORE EDIT COMMANDS
 *** DONE - undo_only
 *** TODO - redo
 *** IGNORE - transpose_chars
@@ -301,52 +299,59 @@ Enjoy using WOWEE and bring the power of Emacs navigation to your Windows experi
 *** DONE - search_forward
 *** DONE - search_backward
 *** TODO - overwrite_mode
-** IGNORE CASE CONVERSION COMMANDS
+** IGNORE CORE CASE CONVERSION COMMANDS
 *** IGNORE - upcase_region
 *** IGNORE - downcase_region
 *** IGNORE - upcase_word
 *** IGNORE - downcase_word
 *** IGNORE - capitalize_word
-** TODO INSERT PAIRS COMMANDS
+** TODO CORE INSERT PAIRS COMMANDS
 *** TODO - insert_parentheses
 *** TODO - insert_comment
 *** TODO - indent_new_comment_line
-** TODO OTHER COMMANDS
+** TODO CORE OTHER COMMANDS
 *** TODO - shell
 *** TODO - shell_command
 *** TODO - facemenu
 *** TODO - help
-** TODO SYSTEM COMMANDS
+** TODO CORE SYSTEM COMMANDS
 *** TODO - ignore
 *** DONE - set_mark_command
 *** DONE - set_cx_command
 *** DONE - keyboard_quit
 *** TODO - repeat
-** TODO DIGIT ARGUMENT COMMANDS
-** TODO MACRO RECORDING COMMANDS
-** TODO FILES COMMANDS
+** TODO CORE DIGIT ARGUMENT COMMANDS
+** IGNORE CORE MACRO RECORDING COMMANDS
+** TODO CORE FILES COMMANDS
 *** DONE - save_buffer
 *** TODO - write_file
 *** TODO - find_file
 *** TODO - dired
-** TODO WINDOWS FRAMES COMMANDS
+** TODO CORE WINDOWS FRAMES COMMANDS
 *** TODO - kill_frame
 *** TODO - delete_window
 *** TODO - split_window
 *** TODO - next_window
 *** TODO - previous_window
 *** TODO - suspend_frame
-** TODO ADD HOOKS
-** TODO ADD IGNORE FRAMES
+** TODO CORE ADD HOOKS
+** IGNORE CORE ADD IGNORE FRAMES
 ** TODO ADD GENERIC GOTO LINE
-** TODO ADD KILL RING
-** TODO ADD MOUSE EVENTS
-** TODO ADD C-X
+** TODO CORE ADD KILL RING
+** IGNORE CORE ADD MOUSE EVENTS
+** DONE CORE ADD C-X
 ** DOING ---- VISUAL STUDIO ----
-*** DOING - isearch_backwards
-*** DOING - isearch_forwards
+*** DONE - isearch_backwards
+*** DONE - isearch_forwards
+*** DONE - comment_line
 *** DOING - recenter_line
 *** DOING - indent_line
+** DOING ---- VSCODE ----
+*** DOING - isearch_backwards
+*** DOING - isearch_forwards
+*** DONE - comment_line
+*** TODO - recenter_line
+*** TODO - indent_line
 ** DOING ADD PROGRAM SPECIFIC PRESETS
 ** TODO EXTRA ERGO PRESET SELECTION
 ** TODO EXTRA
